Added ml_template and supporting updates

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,9 @@ mypy-extensions = "*"
 humanize = "*"
 scikit-learn = "*"
 schedule = "*"
+statsmodels = "*"
+pycaret = "*"
+dateparser = "*"
 
 [dev-packages]
 
